--- a/topcoder.vcxproj
+++ b/topcoder.vcxproj
@@ -121,10 +121,13 @@
   <ItemGroup>
     <ClInclude Include="Aaagmnrs.h" />
     <ClInclude Include="Bullets.h" />
+    <ClInclude Include="Complaints.h" />
     <ClInclude Include="Execution.h" />
+    <ClInclude Include="GameOfLife.h" />
     <ClInclude Include="Lexer.h" />
     <ClInclude Include="MessageMess.h" />
     <ClInclude Include="Pricing.h" />
+    <ClInclude Include="Time.h" />
     <ClInclude Include="TVTower.h" />
     <ClInclude Include="WidgetRepairs.h" />
   </ItemGroup>
