--- a/topcoder.vcxproj.filters
+++ b/topcoder.vcxproj.filters
@@ -46,6 +46,9 @@
     <ClInclude Include="RectangularGrid.h">
       <Filter>Headers</Filter>
     </ClInclude>
+    <ClInclude Include="CCipher.h">
+      <Filter>Headers</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Headers">
